allow p^n in probabilities + minor changes
Merge of branch 2021.11.proba_power

- allow p^n in probabilities
- check for overflows in the computations of exponents of polynoms
- share common part of probaf between the 2 front-ends in the parser
- textsecure uses square GDH, name the probability accordingly

--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,7 @@ useless assignments.
 game are really unique.
 - Added definitions of Diffie-Hellman properties with a single
 family of exponents, in the standard library of cryptographic primitives.
-- Allow "min" in probability formulas.
+- Allow "min" and "probability^n" for integers n in probability formulas.
 - In a "proba" declaration, allow the user to specify the dimensions of
 the arguments of the probability function.
 - CryptoVerif now checks that calls to the same probability function
