added construct optim-if in probability formulas
Merge of branch 2021.12.proba_optim_if

- added construct optim-if in probability formulas.
- use it to optimize the computation of the runtime of the context
when adding a replication on top of an equiv declaration.

--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,11 @@ useless assignments.
 game are really unique.
 - Added definitions of Diffie-Hellman properties with a single
 family of exponents, in the standard library of cryptographic primitives.
-- Allow "min" and "probability^n" for integers n in probability formulas.
+- Allow "min(<probability>, ..., <probability>)", "<probability>^<integer>", 
+and "optim-if <condition> then <probability> else <probability>"
+in probability formulas.
+- Improved the computation of the runtime of the context when
+adding a replication on top of an "equiv" declaration (using "optim-if").
 - In a "proba" declaration, allow the user to specify the dimensions of
 the arguments of the probability function.
 - CryptoVerif now checks that calls to the same probability function
