--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -51,7 +51,7 @@ Keywords cannot be used as ordinary identifiers. The keywords are:
 {\tt proba}, {\tt process}, 
 {\tt proof}, {\tt public\_vars}, {\tt query}, {\tt query\_equiv}, {\tt return},
 {\tt secret}, {\tt set}, {\tt special}, {\tt suchthat}, {\tt table}, 
-{\tt then}, {\tt time}, {\tt type}, {\tt yield}%
+{\tt then}, {\tt time}, {\tt type}, {\tt yield}.
 
 \newcommand{\bs}{\textbackslash}
 
